corrección de errores y validación de campos

--- a/Grupo6_Tp3_Colecciones/src/colegio/vistas/FormularioAlumno.form
+++ b/Grupo6_Tp3_Colecciones/src/colegio/vistas/FormularioAlumno.form
@@ -119,8 +119,14 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jtApellido">
+      <Events>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jtApellidoFocusLost"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jtNombre">
+      <Events>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jtNombreFocusLost"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jbGuardar">
       <Properties>
