--- a/Grupo6_Tp3_Colecciones/src/colegio/vistas/FormularioMateria.form
+++ b/Grupo6_Tp3_Colecciones/src/colegio/vistas/FormularioMateria.form
@@ -121,6 +121,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="jTextField2"/>
       </Properties>
+      <Events>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jtNombreFocusLost"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jtAnio">
       <Properties>
